--- a/use_restaurant/Cargo.toml
+++ b/use_restaurant/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2021"
 
 # Dependência do GitHub do projeto `restaurant`
 # Descomente a linha abaixo e comente a linha do path local para usar a versão do repositório
-restaurant = { git = "https://github.com/EllitonDias/reuso-de-software/tree/main/restaurant", branch = "main" }
+restaurant = { git = "https://github.com/EllitonDias/reuso-de-software.git", branch = "main" }
